<resources>
    <string name="app_name">Roomies</string>

    <string name="SignIn_info">Please enter your email address and your password to sign-in :</string>
    <string name="SignIn_email">Email address</string>
    <string name="SignIn_password">Password</string>
    <string name="SignIn_button">Sign-In</string>
    <string name="CreateAccount">Create Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name_compulsory">First name *</string>
    <string name="last_name_compulsory">Last name *</string>
    <string name="prompt_email_compulsory">Email address *</string>
    <string name="prompt_password_compulsory">Password *</string>
    <string name="prompt_password_confirm_compulsory">Confirm password *</string>
    <string name="prompt_city_compulsory">City *</string>
    <string name="prompt_state_compulsory">State *</string>

    <string name="create_colocation">Create a Roomies group</string>
    <string name="join_colocation">Join a Roomies group</string>

    <string name="coloc_name">Roomies group name *</string>
    <string name="coloc_description">Description *</string>
    <string name="next">Next</string>

    <string name="url_base">http://192.168.1.73:4040</string>
    <string name="action_search">Rechercher</string>
    <string name="finish">Terminer</string>
    <string name="profile">Profile</string>
    <string name="roomies_group">Roomies Group</string>
    <string name="profile_informations">Update your profile informations</string>
    <string name="roomies_informations">Update your roomies group informations</string>
    <string name="members">Members :</string>

    <string name="facebook_app_id">1307699429249151</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_roomie">Update Roomie</string>
    <string name="update_profile_success">Your profile has been updated !</string>
    <string name="update_profile_error">Error : your profile has not been updated</string>
    <string name="update_roomie_success">Your roomie has been updated !</string>
    <string name="update_roomie_error">Error : your roomie has not been updated</string>
    <string name="facebook">Facebook</string>
    <string name="erreur_connexion">Erreur de connexion</string>
    <string name="button_for_facebook">Button for facebook</string>
    <string name="join_coloc">Join this group</string>
    <string name="leave_roomie">Leave this roomie</string>
</resources>
