<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="roomies.com.roomies.secondactivityviews.parameters.ParametersFragment">


    <LinearLayout
        android:id="@+id/update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginStart="10dip"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:text="@string/profile"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:gravity="center_horizontal"
            android:text="@string/profile_informations"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_roomies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginStart="10dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:text="@string/roomies_group"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:gravity="center_horizontal"
            android:text="@string/roomies_informations"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>
