<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dip"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/update_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@drawable/forme_arrondie_bleue"
            android:scaleType="fitCenter"
            android:src="@drawable/unknown_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="30"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/update_fistname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/forme_arrondie_bleue"
                    android:fontFamily="MV Boli"
                    android:hint="@string/first_name_compulsory"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/update_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/forme_arrondie_bleue"
                    android:fontFamily="MV Boli"
                    android:hint="@string/last_name_compulsory"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="15dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/update_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/forme_arrondie_bleue"
            android:fontFamily="MV Boli"
            android:hint="@string/prompt_email_compulsory"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp">

        <AutoCompleteTextView
            android:id="@+id/update_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/forme_arrondie_bleue"
            android:fontFamily="MV Boli"
            android:hint="@string/prompt_city_compulsory"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/update_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/forme_arrondie_bleue"
            android:fontFamily="MV Boli"
            android:hint="@string/prompt_state_compulsory"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/update_profile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="16dp"
        android:background="@drawable/forme_arrondie_bleue"
        android:fontFamily="MV Boli"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingRight="15dp"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_profile_message"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal"
        />
</LinearLayout>
